fix: tooltip slight displ with scrollbar

--- a/src/general.scss
+++ b/src/general.scss
@@ -6,7 +6,7 @@ body {
 body {
   overflow-x: hidden;
   overflow-y: auto;
-  width: 100vw;
+  width: 100dvw;
   perspective: 120vh;
 }
 
